--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,177 +1,177 @@
-@Font-Face {
-    font-family: 'Omori';
-    src: url('../assets/fonts/OMORI_GAME2.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+@font-face {
+  font-family: "Omori";
+  src: url("../assets/fonts/OMORI_GAME2.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
-@Font-Face {
-    font-family: 'Crayon';
-    src: url('../assets/fonts/OMORI_GAME2.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+@font-face {
+  font-family: "Crayon";
+  src: url("../assets/fonts/OMORI_GAME2.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 body {
-    cursor: url('../assets/cursors/happycursor.png'), default;
-    background-color: lightblue;
-    font-family: Omori, sans-serif;
-    font-size: 30px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+  cursor: url("../assets/cursors/happycursor.png"), default;
+  background-color: lightblue;
+  font-family: Omori, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 #start-screen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: lightblue;
-    z-index: 10;
-    cursor: pointer;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: lightblue;
+  z-index: 10;
+  cursor: pointer;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .to {
-    font-family: Omori, sans-serif;
-    font-size: 30px;
-    font-weight: bold;
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: -40px;
+  font-family: Omori, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: -40px;
 }
 
 .from {
-    font-family: Omori, sans-serif;
-    font-size: 30px;
-    font-weight: bold;
-    margin-top: -40px;
+  font-family: Omori, sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: -40px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .App {
-    text-align: center;
+  text-align: center;
 }
 
 .login-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin-bottom: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-bottom: 15px;
 }
 
-input[type=text] {
-    cursor: url('../assets/cursors/chippi.png'), text;
+input[type="text"] {
+  cursor: url("../assets/cursors/chippi.png"), text;
 
-    width: 200px;
-    height: 30px;
-    box-sizing: border-box;
-    border: 2px solid;
+  width: 200px;
+  height: 30px;
+  box-sizing: border-box;
+  border: 2px solid;
 
-    border-radius: 8px;
-    background-color: beige;
+  border-radius: 8px;
+  background-color: beige;
 
-    font-family: Omori, sans-serif;
-    font-size: 20px;
-    font-weight: bold;
+  font-family: Omori, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-button[type=submit] {
-    margin-bottom: 50px;
+button[type="submit"] {
+  margin-bottom: 50px;
 
-    width: 200px;
-    height: 30px;
-    box-sizing: border-box;
-    border: 2px solid;
+  width: 200px;
+  height: 30px;
+  box-sizing: border-box;
+  border: 2px solid;
 
-    font-family: Omori, sans-serif;
-    font-size: 20px;
-    font-weight: bold;
+  font-family: Omori, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
 
-    border-radius: 8px;
-    background-color: beige;
+  border-radius: 8px;
+  background-color: beige;
 
-    cursor: url('../assets/cursors/pop.png'), text;
+  cursor: url("../assets/cursors/pop.png"), text;
 }
 
-button[type=submit]:hover {
-    background-color: navajowhite;
+button[type="submit"]:hover {
+  background-color: navajowhite;
 }
 
 label {
-    cursor: url('../assets/cursors/happycursor.png'), default;
+  cursor: url("../assets/cursors/happycursor.png"), default;
 }
 
 .login-footer {
-    position: fixed;
-    text-align: right;
-    bottom: 0;
-    right: 0;
-    margin: 30px;
+  position: fixed;
+  text-align: right;
+  bottom: 0;
+  right: 0;
+  margin: 30px;
 }
 
 #confetti-canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 .fade-out {
-    animation: fadeOut 2s forwards;
+  animation: fadeOut 2s forwards;
 }
 
 @keyframes fadeOut {
-    from {
-        opacity: 1;
-        background-color: lightblue;
-    }
-    to {
-        opacity: 0;
-        background-color: lightblue;
-    }
+  from {
+    opacity: 1;
+    background-color: lightblue;
+  }
+  to {
+    opacity: 0;
+    background-color: lightblue;
+  }
 }
 
 .fade-in {
-    animation: fadeIn 3.5s forwards;
+  animation: fadeIn 3.5s forwards;
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .fade-out-start {
-    animation: fadeOutStart 1s forwards;
+  animation: fadeOutStart 1s forwards;
 }
 
 @keyframes fadeOutStart {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
