--- a/src/css/ocean.css
+++ b/src/css/ocean.css
@@ -1,66 +1,87 @@
-@Font-Face {
-    font-family: 'Omori';
-    src: url('../assets/fonts/OMORI_GAME2.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+@font-face {
+  font-family: "Omori";
+  src: url("../assets/fonts/OMORI_GAME2.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 body {
-    margin: 0;
-    background-size: cover;
-    overflow: hidden;
-    cursor: url('../assets/cursors/happycursor.png'), default;
-    font-family: Omori, sans-serif;
+  margin: 0;
+  background-size: cover;
+  overflow: hidden;
+  cursor: url("../assets/cursors/happycursor.png"), default;
+  font-family: Omori, sans-serif;
 }
 
 #character {
-    position: absolute;
-    width: 100px;
-    height: 100px;
+  position: absolute;
+  width: 100px;
+  height: 100px;
 }
 
 #character img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #character img.flipped {
-    transform: scaleX(-1);
+  transform: scaleX(-1);
 }
 
 h1 {
-    text-align: center;
-    color: white;
-    font-family: Omori, sans-serif;
-    font-size: 100px;
+  text-align: center;
+  color: white;
+  font-family: Omori, sans-serif;
+  font-size: 100px;
 }
 h6 {
-    text-align: center;
-    color: white;
-    font-family: Omori, sans-serif;
-    font-size: 60px;
+  text-align: center;
+  color: white;
+  font-family: Omori, sans-serif;
+  font-size: 60px;
 }
 
 #dialogue-box {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80%;
-    max-width: 900px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    border: 3px solid white;
-    border-radius: 15px;
-    padding: 20px;
-    box-sizing: border-box;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  max-width: 900px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border: 3px solid white;
+  border-radius: 15px;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 #dialogue-text {
-    margin: 0;
-    font-size: 28px;
-    line-height: 1.4;
-    text-align: left;
-    white-space: pre-wrap;
+  margin: 0;
+  font-size: 28px;
+  line-height: 1.4;
+  text-align: left;
+  white-space: pre-wrap;
+}
+
+.solid,
+.wall,
+.collision,
+.obstacle {
+  outline: 2px solid rgb(247, 248, 190) !important;
+  background-color: rgba(247, 248, 190) !important;
+  z-index: 9999 !important;
+}
+
+.interactable,
+.npc,
+.trigger,
+.warp,
+.sign,
+.dialogue-trigger {
+  outline: 2px solid #00ff00 !important;
+  background-color: rgba(0, 255, 0, 0.4) !important;
+  z-index: 9999 !important;
+  cursor: help !important;
 }
